# conventional-notes-summarization

./: .gitignore  .tool-versions  pyproject.toml  readme.md  research_prompt.md  run.py  summarization_prompt.md
.github/workflows/: sync-metadata.yml
