[tool.poetry]
name = "note-summarization"
version = "0.1.0"
description = ""
authors = ["Michael Bianco <mike@mikebian.co"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
griptape = "^0.18.2"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "5.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
