[tool.poetry]
name = "note-summarization"
version = "0.1.0"
description = "Summarize user interview notes using semantic notes and AI"
keywords = ["llm", "ai", "ux", "summarization", "note", "interview"]
authors = ["Michael Bianco <mike@mikebian.co"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.12"
griptape = "^0.23.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "5.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
